chore: remove dead jSpace-era code, bake API URL into installers (#29) (#40)
Deletes TupleSpaces(+test), the jSpace URI/port/host members of Config, the
shared models package (gson dep moved to client where it is actually used),
the dead requestsUri/responsesUri parameter threading through client
methods/collumns/scenes (54 call sites), the stubbed session export/import
feature (DataManagement + Sidebar UI), and legacy ServerPrefs ip/port keys.
Installers now bake -Dtodolist.api.url (TODOLIST_API_URL repo variable with
production fallback) instead of the dead -Dtodolist.server.ip/-Dtodolist.port.
CLAUDE.md updated (layout, tests, ViewPrefs + prepareDialog conventions).

Co-authored-by: Patrick Røbel <pr@zrm.dk>
Co-authored-by: Claude Fable 5 <noreply@anthropic.com>